Finished Car and CarBooking table design.

--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -52,8 +52,8 @@
         </div>
 
         <div class="form-group mt-3 center-screen">
-            <input type="submit" value="List Car" class="button-one w-250" /> 
-            <a class="button-two w-250 mt-3" asp-action="Index">Back to List</a>
+            <input type="submit" value="List Car" class="bttn button-one w-250" /> 
+            <a class="bttn button-two w-250 mt-3" href="javascript:history.go(-1)">Back to List</a>
 
         </div>
     </form>
