--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,13 +13,13 @@
             <div class="">
                 <ul class="home-ul">
                     <li class="mt-2">
-                        <a class="button-one" asp-area="" asp-controller="Flights" asp-action="Index"><i class="fa-solid fa-plane"></i>   Flight</a>
+                        <a class="bttn button-one w-250" asp-area="" asp-controller="Flights" asp-action="Index"><i class="fa-solid fa-plane"></i>   Flight</a>
                     </li>
                         <li class="mt-2">
-                        <a class="button-one" asp-area="" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i>   Hotel</a>
+                        <a class="bttn button-one w-250" asp-area="" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i>   Hotel</a>
                     </li>
                         <li class="mt-2">
-                        <a class="button-one" asp-area="" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i>   Car</a>
+                        <a class="bttn button-one w-250" asp-area="" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i>   Car</a>
                     </li>
                 </ul>
             </div>
