--- a/Views/CarBookings/Index.cshtml
+++ b/Views/CarBookings/Index.cshtml
@@ -10,14 +10,15 @@
 
     </head>
     <body>
-		<table class="table">
+		<div class="table-wrap">
+		<table class="search-table">
 			<thead>
-				<tr>
+					<tr class="text-center">
 					<th>Start Date</th>
 					<th>Return Date</th>
-					<th>Car Brand</th>
-					<th>Car Model</th>
-					<th>Car License Plate</th>
+					<th>Brand</th>
+					<th>Model</th>
+					<th>License Plate</th>
 					<th>Rented From</th>
 					<th>Total Price Paid</th>
 					<th>Actions</th>
@@ -27,7 +28,7 @@
 			@foreach (var carBooking in Model)
 			{
 				<tbody>
-					<tr>
+					<tr class="text-center">
 						<td>@carBooking.BookedStartDate</td>
 						<td>@carBooking.BookedEndDate</td>
 						<td>@ViewData["Brand"]</td>
@@ -42,16 +43,17 @@
 							$@finalPrice
 							</td>
 						<td>
-							<a asp-controller="CarBookings" class="btn btn-secondary" asp-route-id="@carBooking.Id" asp-action="Edit">Edit Booking</a>
-							<a asp-controller="CarBookings" class="btn btn-danger" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
+							<a asp-controller="CarBookings" class="bttn button-one w-125" asp-route-id="@carBooking.Id" asp-action="Edit">Edit Booking</a>
+							<a asp-controller="CarBookings" class="bttn button-danger w-125" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
 						</td>
 
 					</tr>
 				</tbody>
 			}
 		</table>
+		</div>
         <p>
-            <a class="btn btn-outline-primary"  asp-action="Create" asp-route-CarId="@ViewData["CarId"]">Create a Car Booking!</a>
+            <a class="bttn button-one"  asp-action="Create" asp-route-CarId="@ViewData["CarId"]">Create a Car Booking!</a>
         </p>
     </body>
 </html>
