--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -12,21 +12,20 @@
     </head>
     <body>
         <h2>Cars</h2>
-
+        <div class="table-wrap">
         @if (Model.Any())
         {
-            <table class="table">
+            <table class="table search-table">
                 <thead>
-                    <tr>
-                        <td>Rental Company</td>
+                    <tr class="text-center">
                         <td>Model</td>
                         <td>Brand</td>
                         <td>Description</td>
                         <td>Price/Day</td>
-                        <td>Rating</td>
                         <td>Details</td>
-                        <td>Book It!</td>
-                        <td>View Details for</td>
+                        <td>Add Booking</td>
+                        <td>View Bookings</td>
+
                     </tr>
                 </thead>
 
@@ -34,30 +33,28 @@
 
                     @foreach (var car in Model)
                     {
-                        <tr>
-                            <td>@car.RentalCompany</td>
+                        <tr class="text-center">
                             <td>@car.Model</td>
                             <td>@car.Brand</td>
                             <td>@car.Description</td>
                             <td>$@car.Price</td>
-                            <td>@car.Rating</td>
-                            <td><a asp-action="Details" asp-route-carId="@car.CarId"><i class="fa-solid fa-circle-info"></i></a></td>
-                            <td><a asp-controller="CarBookings" class="btn btn-primary" asp-action="Create" asp-route-carId="@car.CarId">Book This Car!</a></td>
-                            <td><a asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="btn btn-dark">@car.Brand @car.Model</a>
-
-                        </td>
+                            <td><a asp-controller="Cars" class="bttn button-one w-125" asp-action="Details" asp-route-carId="@car.CarId">View Details</a></td>
+                            <td>
+                                <a asp-controller="CarBookings" class="bttn button-two w-125 " asp-action="Create" asp-route-carId="@car.CarId">Book Car!</a></td>
+                                <td><a asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="bttn button-three w-125 ">View Bookings</a>
+                            </td>
                         </tr>
                     }
                 </tbody>
             </table>
         }
-       
+       </div>
         else
         {
             <p>No Car data</p>
         }
         <p>
-            <a class="btn btn-outline-primary" asp-area="" asp-action="Create">List another car!</a>
+            <a class="button-one" asp-area="" asp-action="Create">List another car!</a>
         </p>
     </body>
 </html>
