Fixed Issue with button, and Search in Car

--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -48,13 +48,14 @@
                 </tbody>
             </table>
         }
-       </div>
+
         else
         {
             <p>No Car data</p>
         }
+        </div>
         <p>
-            <a class="button-one" asp-area="" asp-action="Create">List another car!</a>
+            <a class="bttn button-one" asp-area="" asp-action="Create">List another car!</a>
         </p>
     </body>
 </html>
