--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -196,7 +196,7 @@ nav {
         color: #cccccc;
     }
 .button-danger {
-    background-color: #ff3f3f;
+    background-color: #d40000;
 }
 
 .button-one {
