Added Igloo animation, synced about-us in footer with the one in navbar

--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -51,7 +51,7 @@
 
         else
         {
-            <p>No Car data</p>
+                <p>There are currently cars under your search conditions, click on the button below to add the first!</p>
         }
         </div>
         <p>
