--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="center-screen mt-5">
-	<h2 class="mt-5">This is a project built for COMP2139 - George Brown College by:</h2>
+	<h2 class="mt-5 text-center">This is a project built for COMP2139 - George Brown College by:</h2>
 	<h2 class="mt-5">Elio Fezollari</h2>
 	<div class="flex-row d-flex ">
 		<a href="https://github.com/ElioFezollari"><i class="fa-brands fa-github fa-3x"></i></a>
