--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="index-div d-flex flex-column text-center flex-md-row justify-content-around align-items-center w-100 ">
         <div>
             <p>Welcome To</p>
-            <h1 class=""><i class="fa-solid fa-igloo color-1"></i> <span class="color-2">The</span> <span class="color-3">North</span> <span class="color-4">Pole</span></h1>
+            <h1 class=""><i class="fa-solid fa-igloo igloo color-1"></i> <span class="color-2">The</span> <span class="color-3">North</span> <span class="color-4">Pole</span></h1>
             <p>Your Personal Booking Site</p>
         </div>
         <div>
