--- a/Views/CarBookings/Index.cshtml
+++ b/Views/CarBookings/Index.cshtml
@@ -10,49 +10,57 @@
 
     </head>
     <body>
-		<div class="table-wrap">
-		<table class="search-table">
-			<thead>
-					<tr class="text-center">
-					<th>Start Date</th>
-					<th>Return Date</th>
-					<th>Brand</th>
-					<th>Model</th>
-					<th>License Plate</th>
-					<th>Rented From</th>
-					<th>Total Price Paid</th>
-					<th>Actions</th>
-				</tr>
-			</thead>
+		@if (Model.Any())
+		{
+			<div class="table-wrap">
+				<table class="search-table">
+					<thead>
+						<tr class="text-center">
+							<th>Start Date</th>
+							<th>Return Date</th>
+							<th>Brand</th>
+							<th>Model</th>
+							<th>License Plate</th>
+							<th>Rented From</th>
+							<th>Total Price Paid</th>
+							<th>Actions</th>
+						</tr>
+					</thead>
 
-			@foreach (var carBooking in Model)
-			{
-				<tbody>
-					<tr class="text-center">
-						<td>@carBooking.BookedStartDate</td>
-						<td>@carBooking.BookedEndDate</td>
-						<td>@ViewData["Brand"]</td>
-						<td>@ViewData["Model"]</td>
-						<td>@ViewData["PlateNumber"]</td>
-						<td>@ViewData["RentalCompany"]</td>
-						<!--Calculating the total price -->
-						<td>@{
-							double calculatedPrice = (Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays);
-							double @minimumPrice = Convert.ToDouble(ViewData["Price"]);
-							double finalPrice = Math.Max(calculatedPrice, minimumPrice);}
-							$@finalPrice
-							</td>
-						<td>
-							<a asp-controller="CarBookings" class="bttn button-one w-125" asp-route-id="@carBooking.Id" asp-action="Edit">Edit Booking</a>
-							<a asp-controller="CarBookings" class="bttn button-danger w-125" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
-						</td>
+					@foreach (var carBooking in Model)
+					{
+						<tbody>
+							<tr class="text-center">
+								<td>@carBooking.BookedStartDate</td>
+								<td>@carBooking.BookedEndDate</td>
+								<td>@ViewData["Brand"]</td>
+								<td>@ViewData["Model"]</td>
+								<td>@ViewData["PlateNumber"]</td>
+								<td>@ViewData["RentalCompany"]</td>
+								<!--Calculating the total price -->
+								<td>@{
+										double calculatedPrice = (Convert.ToDouble(ViewData["Price"]) * (carBooking.BookedEndDate - carBooking.BookedStartDate).TotalDays);
+										double @minimumPrice = Convert.ToDouble(ViewData["Price"]);
+										double finalPrice = Math.Max(calculatedPrice, minimumPrice);
+									}
+									$@finalPrice
+								</td>
+								<td>
+									<a asp-controller="CarBookings" class="bttn button-one w-125" asp-route-id="@carBooking.Id" asp-action="Edit">Edit Booking</a>
+									<a asp-controller="CarBookings" class="bttn button-danger w-125" asp-route-id="@carBooking.Id" asp-action="Delete">Cancel Booking</a> 
+								</td>
 
-					</tr>
-				</tbody>
-			}
-		</table>
-		</div>
-        <p>
+							</tr>
+						</tbody>
+					}
+				</table>
+			</div>
+		}
+		else
+		{
+			<p>There are currently no bookings for this Category, click on the button below to be the first!</p>
+		}
+		<p>
             <a class="bttn button-one"  asp-action="Create" asp-route-CarId="@ViewData["CarId"]">Create a Car Booking!</a>
         </p>
     </body>
