Little small updated because i have to pull.

--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -48,13 +48,13 @@
                 </tbody>
             </table>
         }
-       </div>
         else
         {
             <p>No Car data</p>
         }
+        </div>
         <p>
-            <a class="button-one" asp-area="" asp-action="Create">List another car!</a>
+            <a asp-area="" class="bttn button-one mt-3 w-250 btn-primary" asp-action="Create">List another car!</a>
         </p>
     </body>
 </html>
