--- a/Views/Flights/Create.cshtml
+++ b/Views/Flights/Create.cshtml
@@ -9,69 +9,65 @@
 <h4>Flight</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class=" center-screen">
+        <form asp-action="Create" class="d-flex flex-column col col-md-3 mx-auto">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FlightNumber" class="control-label"></label>
-                <input asp-for="FlightNumber" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="FlightNumber" class="control-label mt-3"></label>
+                <input asp-for="FlightNumber" class="input-one col-12 " />
                 <span asp-validation-for="FlightNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Airline" class="control-label"></label>
-                <input asp-for="Airline" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="Airline" class="control-label mt-3"></label>
+                <input asp-for="Airline" class="input-one " />
                 <span asp-validation-for="Airline" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DepartureDate" class="control-label"></label>
-                <input type="date" asp-for="DepartureDate" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="DepartureDate" class="control-label mt-3"></label>
+                <input type="date" asp-for="DepartureDate" class="input-one" />
                 <span asp-validation-for="DepartureDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ArrivalDate" class="control-label"></label>
-                <input type="date" asp-for="ArrivalDate" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="ArrivalDate" class="control-label mt-3"></label>
+                <input type="date" asp-for="ArrivalDate" class="input-one" />
                 <span asp-validation-for="ArrivalDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DepartureTime" class="control-label"></label>
-                <input type="time" asp-for="DepartureTime" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="DepartureTime" class="control-label mt-3"></label>
+                <input type="time" asp-for="DepartureTime" class="input-one" />
                 <span asp-validation-for="DepartureTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ArrivalTime" class="control-label"></label>
-                <input type="time" asp-for="ArrivalTime" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="ArrivalTime" class="control-label mt-3"></label>
+                <input type="time" asp-for="ArrivalTime" class="input-one" />
                 <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="Price" class="control-label mt-3"></label>
+                <input asp-for="Price" class="input-one" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="From" class="control-label"></label>
-                <input asp-for="From" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="From" class="control-label mt-3"></label>
+                <input asp-for="From" class="input-one" />
                 <span asp-validation-for="From" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="To" class="control-label"></label>
-                <input asp-for="To" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="To" class="control-label mt-3"></label>
+                <input asp-for="To" class="input-one" />
                 <span asp-validation-for="To" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Seats" class="control-label"></label>
-                <input asp-for="Seats" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="Seats" class="control-label mt-3"></label>
+                <input asp-for="Seats" class="input-one" />
                 <span asp-validation-for="Seats" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Add Flight" class="btn btn-primary" /> |
-                <a asp-action="Index">Back to List</a>
+            <div class="form-group mt-3 center-screen">
+                <input type="submit" value="Add Flight" class="bttn button-one w-250" />
+                <a class="bttn button-two w-250 mt-3" href="javascript:history.go(-1)">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
