--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="~/img/Logo.jpg" type="image" />
-    <title>@ViewData["Title"] - COMP2139_Assignment1</title>
+    <link rel="icon" href="~/img/Logo2.jpg" type="image" />
+    <title>North Pole</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/COMP2139_Assignment1.styles.css" asp-append-version="true" />
