--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -13,13 +13,13 @@
                     <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Flights" asp-action="Index"><i class="fa-solid fa-plane"></i> Flights</a>
+                    <a class="nav-link " asp-area="" asp-controller="Flights" asp-action="Index"><i class="fa-solid fa-plane"></i> Flight</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i> Hotels</a>
+                    <a class="nav-link " asp-area="" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i> Hotel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i> Cars</a>
+                    <a class="nav-link " asp-area="" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i> Car</a>
                 </li>
             </ul>
         </div>
