Updated Delete And Edit design, Simplified CarsController Create Action

--- a/Views/Cars/Delete.cshtml
+++ b/Views/Cars/Delete.cshtml
@@ -51,7 +51,7 @@
 
     <form asp-action="DeleteConfirmed" method="post">
         @Html.HiddenFor(model => model.CarId)
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="bttn button-danger" /> 
+        <a asp-action="Index" class="bttn button-one">Back to List</a>
     </form>
 </div>
