--- a/Views/Cars/Edit.cshtml
+++ b/Views/Cars/Edit.cshtml
@@ -53,16 +53,15 @@
                 <input asp-for="RentalCompany" class="form-control" />
                 <span asp-validation-for="RentalCompany" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Save" class="bttn button-one" />
+                <a asp-action="Index" class="bttn button-two">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{
