Minor changes in Room Booking and FlightBooking

--- a/Views/Flights/SearchFlight.cshtml
+++ b/Views/Flights/SearchFlight.cshtml
@@ -30,6 +30,7 @@
                         <td>Seats</td>
                         <td>Details</td>
                         <td>Book</td>
+                        <td>Past Bookings</td>
                     </tr>
                 </thead>
 
@@ -46,7 +47,7 @@
                             <td>@flight.Seats</td>
                             <td><a asp-action="Details" asp-route-flightId="@flight.FlightId"><i class="fa-solid fa-ticket"></i></a></td>
                             <td><a asp-controller="FlightBookings" class="btn btn-primary" asp-action="Create" asp-route-flightId="@flight.FlightId">Book!</a></td>
-
+                            <td><a asp-controller="FligtBookings" asp-action="Search" asp-route-flightId="@flight.FlightId">View Bookings</a></td>
                         </tr>
                     }
                 </tbody>
