Update Alert and Design for Flight

--- a/Views/FlightBookings/Index.cshtml
+++ b/Views/FlightBookings/Index.cshtml
@@ -41,3 +41,7 @@
 }
     </tbody>
 </table>
+
+<p>
+    <a class="bttn button-one" asp-action="Create" asp-route-flightId="@ViewData["FlightId"]">Create a Flight Booking!</a>
+</p>
