--- a/Views/FlightBookings/Create.cshtml
+++ b/Views/FlightBookings/Create.cshtml
@@ -10,6 +10,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @{if (ViewBag.ShowAlert)
+        {
+            <script>alert("There are no more seats")</script>
+        }
+        else{
         <form asp-action="Create" asp-route-flightId="@ViewData["FlightId"]">
             <input type="hidden" asp-for="FlightId" />
 
@@ -25,9 +30,15 @@
                 <span asp-validation-for="PassportNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
+            <input type="submit" value="Confirm" class="btn btn-primary" />
+
             </div>
         </form>
+        }}
+        <div class="form-group">
+            <a asp-controller="Flights" asp-action="Index" class="btn btn-info">Back to Search</a>
+
+        </div>
     </div>
 </div>
 
