--- a/Views/RoomBookings/Edit.cshtml
+++ b/Views/RoomBookings/Edit.cshtml
@@ -1,22 +1,18 @@
 ﻿@model COMP2139_Assignment1.Models.RoomBooking
 
 @{
-    ViewData["Title"] = "Add Booking";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>RoomBooking</h4>
 <hr />
-    <p>
-        Are you Sure you want to Book the room with Rating @ViewData["Rating"] and Price @ViewData["Price"].
-    </p>
-    <p>If you are sure you want to book this room please enter the following information and press Confirm</p>
-    <div class="row">
+<div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @Html.HiddenFor(model => model.RoomId)
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="BookedStartDate" class="control-label"></label>
                 <input asp-for="BookedStartDate" class="form-control" />
@@ -28,13 +24,20 @@
                 <span asp-validation-for="BookedEndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
-                <a asp-controller="RoomBookings" class="bttn button-three w-250 mt-2" asp-route-roomId="@ViewData["RoomId"] asp-action="Index">Back to List</a>
+                <label asp-for="RoomId" class="control-label"></label>
+                <select asp-for="RoomId" class="form-control" asp-items="ViewBag.RoomId"></select>
+                <span asp-validation-for="RoomId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
