--- a/Views/CarBookings/Edit.cshtml
+++ b/Views/CarBookings/Edit.cshtml
@@ -3,7 +3,12 @@
 @{
     ViewData["Title"] = "Edit Booking";
 }
-
+<DOCTYPE html>
+    <html>
+        <head>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+        </head>
+        <body>
 <h1>Edit</h1>
 
 <h4>Car Booking</h4>
@@ -33,12 +38,14 @@
                 <span asp-validation-for="BookedEndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
+                <input type="submit" value="Confirm" class="bttn button-one mt-2 w-250" />
+                <a class="bttn button-two mt-2 w-250 inline-element" href="javascript:history.go(-1)">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-
+</body>
+</html>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
