--- a/Views/Cars/Details.cshtml
+++ b/Views/Cars/Details.cshtml
@@ -56,7 +56,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="bttn button-one " asp-route-carId="@Model?.CarId">Edit</a>
-    <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a>
+    <a asp-action="Edit" class="bttn button-one " asp-route-carId="@Model?.CarId">Edit</a> |
+    <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a> |
     <a asp-action="Delete" class="bttn button-danger ms-2" asp-route-carId="@Model?.CarId">Delete</a>
 </div>
