--- a/Views/Cars/Edit.cshtml
+++ b/Views/Cars/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Project</h4>
+<h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -54,7 +54,7 @@
                 <span asp-validation-for="RentalCompany" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input type="submit" value="Save" class="bttn button-one" />
+                <input type="submit" value="Save" class="bttn button-one" /> |
                 <a asp-action="Index" class="bttn button-two">Back to List</a>
             </div>
         </form>
