--- a/Views/Hotels/Edit.cshtml
+++ b/Views/Hotels/Edit.cshtml
@@ -29,8 +29,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" /> | 
-                <a asp-action="Index">Back to List</a>
+                <input type="submit" value="Save" class="bttn button-one" /> | 
+                <a asp-action="Index" class="bttn button-two">Back to List</a>
             </div>
         </form>
     </div>
