--- a/Views/RoomBookings/Delete.cshtml
+++ b/Views/RoomBookings/Delete.cshtml
@@ -31,9 +31,10 @@
         </dd>
     </dl>
     
-    <form asp-action="DeleteConfirmed">
+    <form asp-action="DeleteConfirmed" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Cancel Booking" class="bttn button-one mt-2 w-250" />
+        <a asp-action="Search" asp-route-RoomId="@Model.RoomId"  class="bttn button-two mt-2 w-250">Go Back</a>
     </form>
 </div>
