--- a/Views/RoomBookings/Edit.cshtml
+++ b/Views/RoomBookings/Edit.cshtml
@@ -1,18 +1,18 @@
 ﻿@model COMP2139_Assignment1.Models.RoomBooking
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Booking";
 }
 
 <h1>Edit</h1>
 
-<h4>RoomBooking</h4>
+<h4>Room Booking</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-id="@Model.Id">
+            <input type="hidden" asp-for="RoomId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="BookedStartDate" class="control-label"></label>
                 <input asp-for="BookedStartDate" class="form-control" />
@@ -23,20 +23,13 @@
                 <input asp-for="BookedEndDate" class="form-control" />
                 <span asp-validation-for="BookedEndDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="RoomId" class="control-label"></label>
-                <select asp-for="RoomId" class="form-control" asp-items="ViewBag.RoomId"></select>
-                <span asp-validation-for="RoomId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" class="bttn button-one mt-2 w-250" value="Confirm" />
+                <a class="bttn button-two mt-2 w-250" href="javascript:history.go(-1)">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
