--- a/Views/Rooms/Create.cshtml
+++ b/Views/Rooms/Create.cshtml
@@ -4,35 +4,30 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="text-center">Create Room</h1>
 
-<h4>Room</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+<div class="row center-screen">
+        <form asp-action="Create" class="d-flex flex-column col col-md-3 mx-auto">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="Description" class="control-label mt-3"></label>
+                <textarea asp-for="Description" class="input-one input-desc"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+            <div class="d-flex flex-column">
+                <label asp-for="Price" class="control-label mt-3"></label>
+                <input asp-for="Price" class="input-one" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             @Html.HiddenFor(mode => mode.HotelId)
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3 center-screen">
+                <input type="submit" value="Create" class="bttn button-one w-250" />
+            <a class="bttn button-two w-250 mt-3" href="javascript:history.go(-1)">Back to List</a>
             </div>
         </form>
-    </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
