--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -37,10 +37,11 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-hotelId="@Model?.HotelId">Edit</a> | 
+    <a asp-action="Edit" asp-route-hotelId="@Model?.HotelId" class="bttn button-one">Edit</a> |
+    <a href ='javascript:history.go(-1)' class="bttn button-two ms-2">
+        Back to List</a> |
     <form asp-action="DeleteConfirmed" method="post" class="flight-action">
         @Html.HiddenFor(model => model.RoomId)
-        <input type="submit" value="Delete" class="btn btn-danger" />
-    </form> |
-    <a asp-action="Index" asp-route-hotelId="@Model?.HotelId">Back to List</a>
+        <input type="submit" value="Delete" class="bttn button-danger ms-2" />
+    </form>
 </div>
