--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -5,10 +5,17 @@ html {
     font-size: 14px;
 }
 
+
+
 @media (min-width: 768px) {
     html {
         font-size: 16px;
     }
+}
+
+/*Makes element inline*/
+.inline-element {
+    display: inline-block
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -294,6 +301,8 @@ w-125{
 .w-500 {
     width: 500px;
 }
+
+
 
 /*Media query*/
 @media (max-width: 576px) {
