Fixed Typo on Flight Search

--- a/Views/Flights/SearchFlight.cshtml
+++ b/Views/Flights/SearchFlight.cshtml
@@ -57,7 +57,7 @@
         else{
             if (searchPerformed)
             {
-                <p>No flights awailable with the given requirments.</p>
+                <p>No flights available with the given requirments.</p>
             }
             else
             {
