--- a/Views/Rooms/Index.cshtml
+++ b/Views/Rooms/Index.cshtml
@@ -10,7 +10,16 @@
 
         </head>
         <body>
-    <h2>Rooms</h2>
+            <div class="rooms-container">
+    <h2 class="rooms-heading">Rooms</h2>
+        <form class="rooms-form" asp-action="Search" method="get">
+        <div class="input-price-div w-250 inline-element">
+            <input class="input-price input-one mt-3 " min="0" type="number" name="MinPrice" placeholder="$Min Price" />
+            <input class="input-price input-one mt-3 " min="0" type="number" name="MaxPrice" placeholder="$Max Price" />
+        </div class="inline-element">
+            <button class="bttn button-one mt-3 w-250" type="Submit">Filter</button>
+        </form>
+        </div>
     <div class="table-wrap">
         @if(Model.Any())
         {
@@ -23,9 +32,6 @@
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Price)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Rating)
                         </th>
                         <th>
                             Details
@@ -46,9 +52,6 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Price)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Rating)
                         </td>
                         <td>
                                 <a asp-action="Details" class="bttn button-one w-125" asp-route-id="@item.RoomId">Details</a>
