Unwanted Tables have been droopped.

--- a/Views/Hotels/Create.cshtml
+++ b/Views/Hotels/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1 class="text-danger center-screen">Create Hotel</h1>
+<h1 class="text-center">Create Hotel</h1>
 
 <hr />
 <div class="center-screen">
