--- a/Views/FlightBookings/Edit.cshtml
+++ b/Views/FlightBookings/Edit.cshtml
@@ -13,11 +13,11 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+           @*  <div class="form-group">
                 <label asp-for="FlightId" class="control-label"></label>
                 <select asp-for="FlightId" class="form-control" asp-items="ViewBag.FlightId"></select>
                 <span asp-validation-for="FlightId" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="PassengerName" class="control-label"></label>
                 <input asp-for="PassengerName" class="form-control" />
