--- a/Views/FlightBookings/Index.cshtml
+++ b/Views/FlightBookings/Index.cshtml
@@ -34,6 +34,8 @@
                 @Html.DisplayFor(modelItem => item.PassportNumber)
             </td>
             <td>
+                <a asp-controller="FlightBookings" class="bttn button-one w-125" asp-route-id="@item.Id" asp-action="Edit">Edit Booking</a>
+
                 <a asp-controller="FlightBookings" class="btn btn-danger" asp-route-id="@item.Id" asp-action="Delete">Cancel Booking</a>
 
             </td>
