--- a/Views/FlightBookings/Edit.cshtml
+++ b/Views/FlightBookings/Edit.cshtml
@@ -9,15 +9,15 @@
 <h4>FlightBooking</h4>
 <hr />
 <div class="row">
+    <p>
+        Are you sure you want to Edit the booking for the flight with AirLine @ViewData["Airline"] on @ViewData["DepartureDate"] from @ViewData["From"] to  @ViewData["To"].
+    </p>
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-id="@Model.Id" >
+            <input type="hidden" asp-for="FlightId" />
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-           @*  <div class="form-group">
-                <label asp-for="FlightId" class="control-label"></label>
-                <select asp-for="FlightId" class="form-control" asp-items="ViewBag.FlightId"></select>
-                <span asp-validation-for="FlightId" class="text-danger"></span>
-            </div> *@
+
             <div class="form-group">
                 <label asp-for="PassengerName" class="control-label"></label>
                 <input asp-for="PassengerName" class="form-control" />
@@ -29,7 +29,9 @@
                 <span asp-validation-for="PassportNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="bttn button-one mt-2 w-250" />
+                <a class="bttn button-two mt-2 w-250 inline-element" href="javascript:history.go(-1)">Back to List</a>
+
             </div>
         </form>
     </div>
