Car functionalities are doen final push for car. Edit fixed and Number of passenger query added.

--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -46,6 +46,11 @@
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="d-flex flex-column">
+            <label asp-for="MaxPassenger" class="control-label mt-3"></label>
+            <input asp-for="MaxPassenger" class="input-one" />
+            <span asp-validation-for="MaxPassenger" class="text-danger"></span>
+        </div>
+        <div class="d-flex flex-column">
             <label asp-for="RentalCompany" class="control-label mt-3"></label>
             <input asp-for="RentalCompany" class="input-one" />
             <span asp-validation-for="RentalCompany" class="text-danger"></span>
