--- a/Views/Cars/Index.cshtml
+++ b/Views/Cars/Index.cshtml
@@ -15,6 +15,7 @@
             <input class="input-one w-250" type="text" name="City" placeholder="City" required/>
                 <input class="input-one mt-3 w-250" type="text" name="Brand" placeholder="Brand" />
                 <input class="input-one mt-3 w-250" type="text" name="Model" placeholder="Model" />
+                <input class="input-one mt-3 w-250" type="number" name="NumPassenger" placeholder="Number Of Passenger"/>
                 <div class="input-price-div w-250">
                     <input class="input-price input-one mt-3 " min="0" type="number" name="MinPrice" placeholder="$Min Price" />
                     <input class="input-price input-one mt-3 " min="0" type="number" name="MaxPrice" placeholder="$Max Price" />
