--- a/Views/Cars/Delete.cshtml
+++ b/Views/Cars/Delete.cshtml
@@ -42,6 +42,12 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaxPassenger)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaxPassenger)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RentalCompany)
         </dt>
         <dd class="col-sm-10">
