--- a/Views/Cars/Details.cshtml
+++ b/Views/Cars/Details.cshtml
@@ -46,6 +46,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaxPassenger)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaxPassenger)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RentalCompany)
         </dt>
