--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -22,6 +22,7 @@
                         <td>Brand</td>
                         <td>Description</td>
                         <td>Price/Day</td>
+                        <td>Max Number Of Passenger</td>
                         <td>Details</td>
                         <td>Add Booking</td>
                         <td>View Bookings</td>
@@ -38,6 +39,7 @@
                             <td>@car.Brand</td>
                             <td>@car.Description</td>
                             <td>$@car.Price</td>
+                            <td>@car.MaxPassenger</td>
                             <td><a asp-controller="Cars" class="bttn button-one w-125" asp-action="Details" asp-route-carId="@car.CarId">View Details</a></td>
                             <td>
                                 <a asp-controller="CarBookings" class="bttn button-two w-125 " asp-action="Create" asp-route-carId="@car.CarId">Book Car!</a></td>
