--- a/Views/Flights/SearchFlight.cshtml
+++ b/Views/Flights/SearchFlight.cshtml
@@ -6,6 +6,7 @@
     string searchStringFrom = ViewData["SearchStringFrom"] as string;
     string searchStringTo = ViewData["SearchStringTo"] as string;
     DateOnly? searchStringDepartureDate = ViewData["searchStringDepartureDate"] as DateOnly?;
+    int searchPassengerNum = ViewData["searchPassengerNum"] as int;
 }
 
 <DOCTYPE html>
